deploy/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tunnel-system
---
apiVersion: v1
kind: Service
metadata:
  name: tunnelware
  namespace: tunnel-system
spec:
  selector:
    app: tunnelware
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnelware
  namespace: tunnel-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tunnelware
  template:
    metadata:
      labels:
        app: tunnelware
    spec:
      containers:
        - name: tunnelware
          image: strongmonkey1992/tunnelware:dev
          imagePullPolicy: Always
          args:
            - tunnelware
            - server
            - --listen
            - ":8080"
            - --debug
          ports:
          - containerPort: 8080
          volumeMounts:
            - name: jwt-secret
              mountPath: "/etc/jwt"
              readOnly: true
      volumes:
        - name: jwt-secret
          secret:
            secretName: jwt-private-key
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tunnelware
  namespace: tunnel-system
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "*.tunnelware.do.rancher.space"
        - "tunnelware.do.rancher.space"
      secretName: tunnelware-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tunnelware
                port:
                  number: 80
      host: "*.tunnelware.do.rancher.space"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tunnelware
                port:
                  number: 80
      host: "tunnelware.do.rancher.space"
